--- a/pointcloud.ipynb
+++ b/pointcloud.ipynb
@@ -23,7 +23,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,129 +36,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "from readData import *\n",
-    "from showFig import *"
+    "from showFig import *\n",
+    "from showCloud import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def dynVisual(names=['sample.txt'], prange=(200, 150, 100), skip=20, zaugment=1):\n",
-    "    data = []\n",
-    "    for name in names:\n",
-    "        points = getPoints(name, prange, skip)\n",
-    "        x = points[:, 0]\n",
-    "        y = points[:, 1]\n",
-    "        z = points[:, 2]\n",
-    "    \n",
-    "        trace = go.Scatter3d(\n",
-    "            name=name,\n",
-    "            x=x,\n",
-    "            y=y,\n",
-    "            z=z,\n",
-    "            mode='markers',\n",
-    "            marker=dict(\n",
-    "                size=skip/10,\n",
-    "                color=z,                # set color to an array/list of desired values\n",
-    "                colorscale='Viridis',   # choose a colorscale\n",
-    "                opacity=1\n",
-    "            )\n",
-    "        )\n",
-    "        data.append(trace)\n",
-    "\n",
-    "    layout = go.Layout(\n",
-    "        margin=dict(\n",
-    "            l=0,\n",
-    "            r=0,\n",
-    "            b=0,\n",
-    "            t=0\n",
-    "        )\n",
-    "    )\n",
-    "    camera = dict(\n",
-    "        up=dict(x=1., y=0., z=1.),\n",
-    "        eye=dict(x=0., y=0., z=2.5)\n",
-    "    )\n",
-    "\n",
-    "    \n",
-    "    fig = go.Figure(data=data, layout=layout)\n",
-    "    fig.update_layout(scene_camera=camera)\n",
-    "    fig.update_layout(legend=dict(\n",
-    "        yanchor=\"top\",\n",
-    "        y=0.99,\n",
-    "        xanchor=\"left\",\n",
-    "        x=0.01\n",
-    "    ))\n",
-    "    # fig.update_layout(\n",
-    "    # scene = dict(\n",
-    "    #     xaxis = dict(nticks=4, range=[-200,200],),\n",
-    "    #     yaxis = dict(nticks=4, range=[-150,150],),\n",
-    "    #     zaxis = dict(nticks=4, range=[-prange[2]/zaugment,prange[2]/zaugment],),),\n",
-    "    #     )\n",
-    "    fig.update_scenes(aspectmode='manual', aspectratio=dict(x=1, y=1, z=zaugment))\n",
-    "    # fig.update_layout(scene_aspectmode='manual', scene_aspectratio=dict(x=1, y=1, z=1))\n",
-    "    return fig\n",
-    "\n",
-    "\n",
-    "def addCloud(fig, names=['sample.txt'], prange=(200, 150, 100), skip=20):\n",
-    "    for name in names:\n",
-    "        points = getPoints(name, prange, skip)\n",
-    "        x = points[:, 0]\n",
-    "        y = points[:, 1]\n",
-    "        z = points[:, 2]\n",
-    "    \n",
-    "        trace = go.Scatter3d(\n",
-    "            name=name,\n",
-    "            x=x,\n",
-    "            y=y,\n",
-    "            z=z,\n",
-    "            mode='markers',\n",
-    "            marker=dict(\n",
-    "                size=skip/10,\n",
-    "                color=z,                # set color to an array/list of desired values\n",
-    "                colorscale='Viridis',   # choose a colorscale\n",
-    "                opacity=1\n",
-    "            )\n",
-    "        )\n",
-    "        fig.add_trace(trace)\n",
-    "    return fig"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "read in ..\\stitch\\SizectorS_PointCloudExport1\n",
-      "x range: -193 ~ 194\n",
-      "y range: -149 ~ 142\n",
-      "z range: -198 ~ 188\n",
-      "read in ..\\stitch\\SizectorS_PointCloudExport2\n",
-      "x range: -190 ~ 191\n",
-      "y range: -146 ~ 141\n",
-      "z range: -11 ~ -1\n",
-      "read in ..\\stitch\\SizectorS_PointCloudExport3\n",
-      "x range: -188 ~ 190\n",
-      "y range: -144 ~ 140\n",
-      "z range: 0 ~ 14\n"
+      "read in ..\\dataset\\scan0.npy\nx range: -197 ~ 198\ny range: -153 ~ 145\nz range: -66 ~ 0\nread in ..\\dataset\\scan1.npy\nx range: -197 ~ 198\ny range: -158 ~ 145\nz range: -69 ~ 0\n"
      ]
     }
    ],
    "source": [
-    "fig = dynVisual(names=[\"..\\stitch\\SizectorS_PointCloudExport1\"], skip=20, zaugment=2)\n",
-    "fig = addCloud(fig, [\"..\\stitch\\SizectorS_PointCloudExport2\"], skip=20)\n",
-    "fig = addCloud(fig, [\"..\\stitch\\SizectorS_PointCloudExport3\"], skip=20)\n",
-    "fig.write_html(\"cloudpoint.html\")\n",
+    "points0, mat0 = getPoints(\"..\\dataset\\scan0.npy\", prange=(200, 150, (-100, -30)), skip=20)\n",
+    "points1, mat1 = getPoints(\"..\\dataset\\scan1.npy\", prange=(200, 150, (-100, -30)), skip=20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = dynVisual([points0, points1], [\"src\", \"tgt\"], 0.5, 1)\n",
+    "fig.write_html(\"cloud.html\")\n",
     "# fig.show()"
    ]
   },
@@ -183,7 +95,7 @@
     }
    ],
    "source": [
-    "fig = dynVisual(names=[\"..\\glu\\glue1\", \"..\\glu\\glue2\"], skip=40, zaugment=2)\n",
+    "fig = dynVisual(names=[\"..\\glu\\glue1\", \"..\\glu\\glue2\"], skip=40, zaugment=2, s=1)\n",
     "# fig = addCloud(fig, [\"stitch\\SizectorS_PointCloudExport2\"], skip=20, zaugment=1)\n",
     "# fig = addCloud(fig, [\"stitch\\SizectorS_PointCloudExport3\"], skip=20, zaugment=1)\n",
     "fig.write_html(\"cloudpointglue.html\")"
