--- a/detectTag.ipynb
+++ b/detectTag.ipynb
@@ -44,7 +44,7 @@
     "from showFig import *\n",
     "from showCloud import *\n",
     "from warp import *\n",
-    "from transform import Transformer\n",
+    "from Transformer import Transformer\n",
     "\n",
     "\n",
     "tf = Transformer()\n"
