--- a/fitGraph.ipynb
+++ b/fitGraph.ipynb
@@ -29,7 +29,6 @@
    "source": [
     "import numpy as np\n",
     "from util import *\n",
-    "import os\n",
     "import cv2\n",
     "from matplotlib import pyplot as plt"
    ]
@@ -43,7 +42,8 @@
     "from readData import *\n",
     "from showFig import *\n",
     "from showCloud import *\n",
-    "from warp import *"
+    "from warp import *\n",
+    "from depth import *"
    ]
   },
   {
